# Hush-vani

./: .gitattributes  .gitignore  Cargo.toml  README.md
bench_samples/: results.json
hush-vani/: Cargo.toml  ENGINEERING.md  NOTICE  README.md
hush-vani-core/: Cargo.toml  README.md
hush-vani-core/src/: bank.rs  encoder.rs  lib.rs  nn.rs  simd.rs  weights.rs
hush-vani-weights/: Cargo.toml  NOTICE  README.md
hush-vani-weights/data/: weights.txt
hush-vani-weights/src/: lib.rs
hush-vani-weights/tools/: analyze_weights.py  build_viz.py  hist_export.py  quantize_roundtrip.py  weights_viz.html
hush-vani/data/: weights.txt
hush-vani/examples/: bundled.rs  denoise.rs
hush-vani/src/: alloc.rs  bank.rs  decoders.rs  dsp.rs  encoder.rs  error.rs  lib.rs  model.rs  nn.rs  simd.rs  weights.rs
hush-vani/tools/: ab_bench.py  ab_f16.py  bench_samples.py  build_listen.py  build_samples_page.py  compare_audio.py  compare_precision.py  df_dec.txt  dump_graph.py  enc.txt  erb_dec.txt  export_fixtures.py  export_weights.py  hist.json  make_comparison.py  organize_audio.py  probe_dsp.py  probe_synth.py  quant_confirm.py  quant_schemes.py  quant_sweep.py  serve_audio.py  verify_int8.py
ort/: README.md  chunk_test.py  config.json  hush_ort.py  inspect_graph.py  inspect_io.py  probe_delay.py  run_report.py
