[package]
name = "hush-vani-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Core DSP, neural kernels, and encoder for hush-vani speech enhancement. Runtime-dispatched AVX2, no ONNX runtime, no BLAS."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Allenmylath/Hush-vani"
keywords = ["audio", "speech", "denoise", "dsp", "simd"]
categories = ["multimedia::audio", "algorithms"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE*"]

[features]
# Run the matmul kernels natively on f16 weights (requires an f16 weight file + F16C).
# Halves resident weight memory (9.1 MB -> 4.6 MB) at ~10% lower throughput: the matrices
# already fit in L2, so there is no bandwidth to save, and vcvtph2ps competes with the FMA
# ports. Off by default -- f16 files are widened to f32 at load and run the f32 kernels,
# which is the same arithmetic at full speed.
f16-kernels = []

[dependencies]
rustfft = "6.2"
