[package]
name = "hush-vani"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
description = "Real-time speech enhancement and background-speaker suppression (DeepFilterNet3-style), pure Rust with runtime-dispatched AVX2 kernels. Weights included. No ONNX runtime, no BLAS."
license = "Apache-2.0"
readme = "README.md"
keywords = ["audio", "speech", "denoise", "dsp", "vad"]
categories = ["multimedia::audio", "algorithms"]
repository = "https://github.com/Allenmylath/Hush-vani"

# Source, the embedded int8 weights (2.44 MB), and the model's attribution. assets/ is the
# f32/f16 blobs and test fixtures -- regenerate those with tools/export_weights.py.
include = [
    "src/**/*.rs",
    "data/weights.bin",
    "data/weights.txt",
    "examples/denoise.rs",
    "sample_raw.wav",
    "Cargo.toml",
    "README.md",
    "ENGINEERING.md",
    "LICENSE",
    "NOTICE",
]

autobins = false

[features]
default = ["cli"]
# The `hush-vani` binary (wav I/O).
cli = ["dep:hound"]
# Run the matmul kernels natively on f16 weights (requires an f16 weight file + F16C).
# Halves resident weight memory at ~10% lower throughput: the matrices already fit in L2, so
# there is no bandwidth to save, and vcvtph2ps competes with the FMA ports. Off by default --
# an f16 file is widened to f32 at load and runs the f32 kernels, same arithmetic, full speed.
f16-kernels = []
# Verification + benchmark binaries. Need assets/; not usable from crates.io.
devtools = ["cli"]

[dependencies]
rustfft = "6.2"
hound = { version = "3.5", optional = true }

[lib]
name = "hush_vani"
path = "src/lib.rs"

[[bin]]
name = "hush-vani"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "hush-devtool"
path = "src/bin/devtool.rs"
required-features = ["devtools"]

[[bin]]
name = "hush-profile"
path = "src/bin/profile.rs"
required-features = ["devtools"]

[[bin]]
name = "hush-kernel-ab"
path = "src/bin/kernel_ab.rs"
required-features = ["devtools"]

[[bin]]
name = "hush-micro"
path = "src/bin/micro.rs"
required-features = ["devtools"]

[[bin]]
name = "hush-features"
path = "src/bin/features.rs"
required-features = ["devtools"]

# profile.release lives in the workspace root Cargo.toml (a member's copy is ignored).
